--- a/.github/workflows/check-bioc.yml
+++ b/.github/workflows/check-bioc.yml
@@ -67,6 +67,9 @@ jobs:
 
     steps:
 
+      - name: Install tinytex
+        uses: r-lib/actions/setup-tinytex@master
+
       ## Set the R library to the directory matching the
       ## R packages cache step further below when running on Docker (Linux).
       - name: Set R Library home on Linux
