--- a/.github/workflows/check-bioc.yml
+++ b/.github/workflows/check-bioc.yml
@@ -88,9 +88,6 @@ jobs:
           r-version: ${{ matrix.config.r }}
           http-user-agent: ${{ matrix.config.http-user-agent }}
 
-      - name: Install tinytex
-        uses: r-lib/actions/setup-tinytex@v2
-
       ## pandoc is already included in the Bioconductor docker images
       - name: Setup pandoc from r-lib
         if: runner.os != 'Linux'
@@ -203,7 +200,14 @@ jobs:
           message(paste('****', Sys.time(), 'pass number 2 at installing dependencies: any remaining dependencies ****'))
           remotes::install_local(dependencies = TRUE, repos = BiocManager::repositories(), build_vignettes = TRUE, upgrade = TRUE, force = TRUE)
         shell: Rscript {0}
+        
+      - name: Install tinytex
+        uses: r-lib/actions/setup-tinytex@v2
 
+      - name: add Tex dependencie
+        run: |
+          tinytex::parse_install(text = "! LaTeX Error: File `ae.sty' not found.")
+          
       - name: Install BiocGenerics
         if:  env.has_RUnit == 'true'
         run: |
