--- a/.github/workflows/check-bioc.yml
+++ b/.github/workflows/check-bioc.yml
@@ -207,6 +207,7 @@ jobs:
       - name: add Tex dependencie
         run: |
           tinytex::parse_install(text = "! LaTeX Error: File `ae.sty' not found.")
+        shell: Rscript {0}
           
       - name: Install BiocGenerics
         if:  env.has_RUnit == 'true'
