--- a/.github/workflows/check-bioc.yml
+++ b/.github/workflows/check-bioc.yml
@@ -73,6 +73,7 @@ jobs:
         run: |
           mkdir /__w/_temp/Library
           echo ".libPaths('/__w/_temp/Library')" > ~/.Rprofile
+          sudo apt-get update
 
       ## Most of these steps are the same as the ones in
       ## https://github.com/r-lib/actions/blob/master/examples/check-standard.yaml
@@ -164,6 +165,7 @@ jobs:
 
       - name: add Tex dependencie
         run: |
+          install.packages("tinytex")
           tinytex::parse_install(text = "! LaTeX Error: File `ae.sty' not found.")
         shell: Rscript {0}
 
