--- a/.github/workflows/check-bioc.yml
+++ b/.github/workflows/check-bioc.yml
@@ -167,6 +167,7 @@ jobs:
         run: |
           install.packages("tinytex")
           tinytex::parse_install(text = "! LaTeX Error: File `ae.sty' not found.")
+          tinytex::parse_install(text = "! LaTeX Error: File `sectsty.sty' not found.")
         shell: Rscript {0}
 
       - name: Install dependencies pass 1
