--- a/.github/workflows/check-bioc.yml
+++ b/.github/workflows/check-bioc.yml
@@ -169,6 +169,8 @@ jobs:
           tinytex::parse_install(text = "! LaTeX Error: File `ae.sty' not found.")
           tinytex::parse_install(text = "! LaTeX Error: File `sectsty.sty' not found.")
           tinytex::parse_install(text = "! LaTeX Error: File `fancyhdr.sty' not found.")
+          tinytex::parse_install(text = "! LaTeX Error: File `enumitem.sty' not found.")
+          tinytex::parse_install(text = "! LaTex Error: File `parskip.sty' not found.")
         shell: Rscript {0}
 
       - name: Install dependencies pass 1
