apparently I did something wrong with this one

--- a/.github/workflows/check-bioc.yml
+++ b/.github/workflows/check-bioc.yml
@@ -170,7 +170,7 @@ jobs:
           tinytex::parse_install(text = "! LaTeX Error: File `sectsty.sty' not found.")
           tinytex::parse_install(text = "! LaTeX Error: File `fancyhdr.sty' not found.")
           tinytex::parse_install(text = "! LaTeX Error: File `enumitem.sty' not found.")
-          tinytex::parse_install(text = "! LaTex Error: File `parskip.sty' not found.")
+          tinytex::parse_install(text = "! LaTeX Error: File `parskip.sty' not found.")
         shell: Rscript {0}
 
       - name: Install dependencies pass 1
